# Qt

./: .gitignore
Qml And Js/Pj_02/: CMakeLists.txt
Qml And Js/Pj_02/components/: CustomButton.qml
Qml And Js/Pj_02/src/: main.cpp
Qml And Js/Pj_02/ui/: main.qml
QtDesignPj_00/: CMakeLists.txt  QtDesignPj_00.qmlproject  QtDesignPj_00.qmlproject.qtds  qmlmodules
QtDesignPj_00/content/: App.qml  Screen01.ui.qml
QtDesignPj_00/imports/: CMakeLists.txt
QtDesignPj_00/imports/QtDesignPj_00/: CMakeLists.txt  Constants.qml  qmldir
QtDesignPj_00/imports/QtDesignPj_00/designer/: plugin.metainfo
QtDesignPj_00/src/: import_qml_plugins.h
Quick and QML/: CMakeLists.txt
Quick and QML/include/: backendlogic.h  customobject.h
Quick and QML/src/: backendlogic.cpp  customobject.cpp  main.cpp
Quick and QML/ui/: CustomItem.qml  CustomObject.qml  main.qml
Sandbox/Qml And Js/: CMakeLists.txt
Sandbox/Qml And Js/BuildAnd/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  android-QHelloWorld-deployment-settings.json  build.ninja  qhelloworld_qmltyperegistrations.cpp
Sandbox/Qml And Js/BuildAnd/.cmake/api/v1/reply/: cmakeFiles-v1-573e4f0eddc85f7821b1.json  codemodel-v2-9fed9d1e1dc03950dfac.json  directory-.-Debug-bf14ce7c0dcd2603b778.json  index-2022-12-02T02-04-38-0297.json  target-QHelloWorld-Debug-22ee630342e053458f2c.json  target-QHelloWorld_make_apk-Debug-1668d2be546def8c9b36.json  target-QHelloWorld_other_files-Debug-079ee19e581e07ae959c.json  target-QHelloWorld_prepare_apk_dir-Debug-da760e2d84fa1070580c.json  target-QHelloWorld_qmllint-Debug-ade7b4ef8d9beb91ad84.json  target-QHelloWorld_qmllint_json-Debug-5141ffa2a962e9978bac.json  target-QHelloWorld_qmltyperegistration-Debug-119a7fe7efe3ad86035b.json  target-QHelloWorld_tooling-Debug-401d5364156614e6cd5c.json  target-aab-Debug-b0c9ffe79182bc3b07dd.json  target-all_qmllint-Debug-bbc3926604f9aab2911b.json  target-all_qmllint_json-Debug-e9bcd4645cc46c6e25db.json  target-all_qmltyperegistrations-Debug-b7a690e506fde6c01a73.json  target-apk-Debug-5a96eb5e8da57c3a57a1.json  target-qt_internal_plugins-Debug-9d7c31cc7ed51b32c271.json
Sandbox/Qml And Js/BuildAnd/.cmake/api/v1/reply.prev/: cache-v2-0b2065208972eb91cfa9.json  codemodel-v2-14db970013fd97fdbdda.json  directory-.-Debug-15b4ea0309a2668e79f8.json  index-2022-12-02T00-56-33-0553.json  target-QHelloWorld-Debug-c65dbde1c2d477f41ab3.json  target-QHelloWorld_autogen-Debug-2d66c94ecbadb560235f.json  target-QHelloWorld_autogen_timestamp_deps-Debug-f254eea85c02c0d3225a.json  target-QHelloWorld_make_aab-Debug-3dc0e0a49c94d3ae31b3.json  target-QHelloWorld_other_files-Debug-2faff84c65f6e55c7443.json  target-QHelloWorld_prepare_apk_dir-Debug-7f66da76e79f8f6d35de.json  target-QHelloWorld_qmllint-Debug-35b320a4013729f5caa6.json  target-QHelloWorld_qmllint_json-Debug-f77648a5082989b1d10d.json  target-QHelloWorld_qmltyperegistration-Debug-a7a15465cd92397ba9c8.json  target-QHelloWorld_tooling-Debug-14367e832c454703e475.json  target-_qt_internal_apk_dependencies-Debug-f1b6e59083a39e90276b.json  target-aab-Debug-cfe12249991efd6d37fa.json  target-all_qmllint-Debug-e59fa3ea16c4c20252a7.json  target-all_qmllint_json-Debug-dddd4efc5979c4c7d2e9.json  target-all_qmltyperegistrations-Debug-3fd4d7f228e04dfc41f1.json  target-apk-Debug-bd520ba156cf10cb4538.json
Sandbox/Qml And Js/BuildAnd/.qt/: QtDeploySupport.cmake
Sandbox/Qml And Js/BuildAnd/.qtc_clangd/.cache/clangd/index/: QMetaType.7CA27022C978A44B.idx  __config.9AA48D33217B76E0.idx  __debug.D548A630DCE6531C.idx  __mutex_base.23D3FD16F0EFD562.idx  __nullptr.E69A7910F0C81BD2.idx  __split_buffer.475DE048AB19A225.idx  __stddef_max_align_t.h.24F8D490B691F028.idx  __string.D0026EE91DC50CBC.idx  __tree.1316C880DED542BB.idx  __undef_macros.F4AF3F0FE0A170C0.idx  algorithm.53231C422DD11F9E.idx  api-level.h.D9A19CDACFABC65B.idx  array.7AA89AC0CC8C10E5.idx  atomic.22838AA3CCC8263A.idx  bitsperlong.h.185DD67070AB424C.idx  bitsperlong.h.19C4177283B02223.idx  cctype.78F56C2F2BEDD9E9.idx  cerrno.9AE54861529B5597.idx  chrono.9CAAF062B28A2FD4.idx  compiler.h.AF73022121F8D2E5.idx  cstddef.A14EBB2FD089CE4A.idx  cstdint.E9749C857C97437A.idx  cstdio.AE3B14E8DE5CDE9D.idx  cstring.9FFC39E0371986D4.idx  ctime.705BB5F0D3838CE9.idx  ctype.h.E63911CADE38F183.idx  cwchar.3C81BB140798F7B9.idx  cwctype.C7A1F2A9326D6513.idx  errno-base.h.FC6E6AFC5F0C16F2.idx  errno.h.2885E7A5641DEAF5.idx  errno.h.2D68FB9FE660DB84.idx  errno.h.473DF752C1525398.idx  errno.h.63727AE5EF37C77B.idx  errno.h.D77FA1CF32F3BDFE.idx  float.h.6EF95B0F167B5B58.idx  float.h.CBDE93438500B1C9.idx  (+155 more)
Sandbox/Qml And Js/BuildAnd/.rcc/: QHelloWorld_raw_qml_0.qrc  qmake_rec.qrc
Sandbox/Qml And Js/BuildAnd/.rcc/qmlcache/: QHelloWorld_qmlcache_loader.cpp
Sandbox/Qml And Js/BuildAnd/.rcc/qmlcache/QHelloWorld_ui/: constants_js.cpp  javascriptFile_js.cpp  main_qml.cpp
Sandbox/Qml And Js/BuildAnd/QHelloWorld_autogen/: deps
Sandbox/Qml And Js/BuildAnd/android-build/: AndroidManifest.xml  gradle.properties
Sandbox/Qml And Js/BuildAnd/android-build/assets/: android_rcc_bundle.rcc
Sandbox/Qml And Js/BuildAnd/android-build/res/values/: libs.xml
Sandbox/Qml And Js/BuildAnd/qmltypes/: QHelloWorld_foreign_types.txt
Sandbox/Qml And Js/BuildAnd/rec/: qmldir
Sandbox/Qml And Js/buildWin/: build.ninja  qtcsettings.cmake
Sandbox/Qml And Js/buildWin/.qt/: QtDeploySupport.cmake
Sandbox/Qml And Js/buildWin/.qt/deploy_qml_imports/: QHelloWorld.cmake
Sandbox/Qml And Js/buildWin/.qt_plugins/: Qt6_QmlPlugins_Imports_QHelloWorld.rsp
Sandbox/Qml And Js/buildWin/.rcc/: qmake_rec.qrc
Sandbox/Qml And Js/buildWin/.rcc/qmlcache/: QHelloWorld_qml_loader_file_list.rsp
Sandbox/Qml And Js/buildWin/qmltypes/: QHelloWorld_foreign_types.txt
Signals And Slots/CppToQml/: CMakeLists.txt
Signals And Slots/CppToQml/include/: cppbackend.h
Signals And Slots/CppToQml/interfaces/: main.qml
Signals And Slots/CppToQml/src/: cppbackend.cpp  main.cpp
Signals And Slots/SignalSlotsWidgetsCmake/: CMakeLists.txt  widget.h  widget.ui
Widget/customWidgets/: CMakeLists.txt
Widget/customWidgets/src/: main.cpp
(+724 files in other folders)
